kustomize/apps/porthole/base/namespace.porthole.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: porthole
  labels:
    app.kubernetes.io/name: porthole
    app.kubernetes.io/part-of: porthole
