kustomize/apps/porthole/base/service.porthole.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: porthole
  namespace: porthole
  labels:
    app.kubernetes.io/name: porthole
    app.kubernetes.io/part-of: porthole
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: porthole
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
    appProtocol: http
