kustomize/apps/porthole/base/networkPolicy.porthole.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: porthole
  namespace: porthole
  labels:
    app.kubernetes.io/name: porthole
    app.kubernetes.io/part-of: porthole
spec:
  podSelector: {}
  policyTypes:
  - Ingress
